# pocket-journal

./: .gitignore  AGENTS.md  Makefile  README.md  THIRD_PARTY_NOTICES.md
assets/dxf/: 3_1.dxf  3_1m.dxf  4_0m.dxf  4_1.dxf
assets/fonts/: IBMPlexMono-LICENSE.txt  IBMPlexMono-SOURCE.md
assets/static/: pocket-journal-default.pbm  smiley.pbm
docs/: README.md  capability-matrix.md  cli-reference.md  device-api.md  device-initiated-sync.md  hardware-bringup.md  hardware-reference.md  home-layout.md  human-validation.md  install.md  partner-sync.md  simulator.md  static-art.md  storage-recovery.md  testing.md  time-alert-model.md  transcription-benchmark.md  ui-visual-verification.md
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults  sdkconfig.ota-signed.defaults
firmware/components/pj_board/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  pj_alert_audio.c  pj_audio_level.c  pj_audio_lifecycle.c  pj_auth.c  pj_aux_input.c  pj_board.c  pj_companion_auth.c  pj_companion_sync.c  pj_companion_sync_runtime.c  pj_display_refresh.c  pj_note_model.c  pj_ota.c  pj_ota_policy.c  pj_power_input.c  pj_recording.c  pj_rtc_wake.c  pj_runtime_diagnostics.c  pj_settings.c  pj_static_art.c  pj_static_art_ui.c  pj_storage.c  pj_storage_coordinator.c  pj_time_civil.c  pj_time_clock.c  pj_time_controller.c  pj_time_sync.c  pj_time_transaction.c  pj_touch_candidate.c  pj_transcript_upload.c  pj_usb_sync.c  pj_wifi_state.c
firmware/components/pj_board/include/: pj_alert_audio.h  pj_audio_level.h  pj_audio_lifecycle.h  pj_auth.h  pj_aux_input.h  pj_board.h  pj_companion_auth.h  pj_companion_sync.h  pj_display_refresh.h  pj_note_model.h  pj_ota.h  pj_ota_policy.h  pj_power_input.h  pj_recording.h  pj_rtc_wake.h  pj_runtime_diagnostics.h  pj_settings.h  pj_static_art.h  pj_static_art_ui.h  pj_storage.h  pj_storage_coordinator.h  pj_time_civil.h  pj_time_clock.h  pj_time_controller.h  pj_time_sync.h  pj_time_transaction.h  pj_touch_candidate.h  pj_transcript_upload.h  pj_usb_sync.h  pj_wifi_state.h
firmware/main/: CMakeLists.txt  app_main.c  pj_display_worker.c  pj_display_worker.h  pj_loop_schedule.c  pj_loop_schedule.h  pj_sync_inventory_gate.c  pj_sync_inventory_gate.h
firmware/tools/: check_app_size.py
partner/: LICENSE  README.md  pyproject.toml
partner/src/pocket_journal_partner/: ble.py  calendar.py  cli.py  companion.py  companion_auth.py  config.py  device.py  diagnostics.py  home_design.py  library.py  operations.py  ota.py  storage.py  sync.py  transcript_payload.py  transcription.py  transcription_benchmark.py  transcription_setup.py  tui.py  web.py
simulator/: index.html
simulator/assets/: dxf-layout-geometry.json
simulator/src/: aux_input.js  display.js  main.js  styles.css  ui_model.js
simulator/wasm/: pj_ui_wasm_bridge.c
tests/assets/: test_carbon_assets.py
tests/board/: test_alert_audio.c  test_audio_level.c  test_audio_lifecycle.c  test_auth.c  test_aux_input.c  test_companion_sync.c  test_companion_sync_runtime.c  test_display_pipeline.c  test_display_refresh.c  test_display_worker.c  test_home_layout.c  test_loop_schedule.c  test_note_model.c  test_ota_policy.c  test_power_input.c  test_recording.c  test_rtc_wake.c  test_runtime_diagnostics.c  test_settings.c  test_static_art.c  test_storage.c  test_storage_coordinator.c  test_sync_inventory_gate.c  test_time_civil.c  test_time_clock.c  test_time_controller.c  test_time_sync.c  test_time_transaction.c  test_transcript_upload.c  test_usb_sync.c  test_wifi_state.c
tests/firmware/: test_app_size.py  test_dxf_geometry.py
tests/partner/: test_ble.py  test_board_concurrency_contract.py  test_board_inventory_mutation_contract.py  test_board_time_transaction_contract.py  test_calendar.py  test_companion.py  test_companion_auth.py  test_config.py  test_connectivity_cli.py  test_diagnostics.py  test_home_design.py  test_library.py  test_library_web.py  test_operations.py  test_ota.py  test_record_async_contract.py  test_serial_lifecycle.py  test_settings.py  test_storage.py  test_sync.py  test_transcription.py  (+6 more)
tools/: generate_dxf_geometry.py  generate_font_assets.py  generate_icon_assets.py  generate_static_art.py  generate_ui_gallery.mjs  render_ui_preview.c  simulator_server.py  ui_image_checks.mjs
(+35 files in other folders)
