[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pocket-journal-partner"
version = "0.1.0"
description = "Partner CLI for Pocket Journal"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
ble = ["bleak>=0.22"]
calendar = ["google-api-python-client>=2.130", "google-auth-oauthlib>=1.2"]
transcription = ["transformers>=4.41", "torch>=2.3", "accelerate>=0.30"]
dev = []

[project.scripts]
pj = "pocket_journal_partner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

