[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pocket-journal-partner"
version = "0.1.0"
description = "Partner CLI for Pocket Journal"
requires-python = ">=3.11"
dependencies = ["esptool>=5.3,<6", "pyserial>=3.5"]

[project.optional-dependencies]
ble = ["bleak>=0.22", "zeroconf>=0.132"]
transcription = ["transformers>=4.41", "torch>=2.3", "accelerate>=0.30"]
# Retained so existing install commands using `.[usb]` continue to work.
usb = []
dev = []

[project.scripts]
pj = "pocket_journal_partner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
