[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pocket-journal-partner"
version = "0.0.0"
description = "Partner CLI for Pocket Journal"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = ["esptool>=5.3,<6", "pyserial>=3.5", "zeroconf>=0.132"]
classifiers = [
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.optional-dependencies]
ble = ["bleak>=0.22"]
transcription = ["transformers>=4.41", "torch>=2.3", "accelerate>=0.30"]
# Retained so existing install commands using `.[usb]` continue to work.
usb = []
dev = []

[project.scripts]
pj = "pocket_journal_partner.cli:main"

[project.urls]
Documentation = "https://github.com/brcolby/pocket-journal/tree/main/docs"
Issues = "https://github.com/brcolby/pocket-journal/issues"
Repository = "https://github.com/brcolby/pocket-journal"

[tool.setuptools.packages.find]
where = ["src"]
